# cctag_heatmap_regression

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  command.md  generate_and_train_mixed.sh  generate_cctag_dataset.py  generate_testing_suites.sh  generate_training_sets.sh  infer_cctag_heatmap.py  pyproject.toml  readme.md  requirements.txt  slides.md  testing_gen.md  train_cctag_heatmap copy.py  train_cctag_heatmap.py  train_cctag_heatmap_ddp.py  util.md  visualize_random_labels.py
CCTag/: display_marker.py
docs/: false_positive_reduction.md  heatmap_optimize.md  model_cmp.md  resnet18_hires_negative_result.md  roi_occlusion.md  sort.md  testing_gen.md  util.md  yolo_vs_cnn.md
docs/history/: yolo_session1_2026-06-04_dataset-and-training.txt  yolo_session2_2026-06-05_yolo-vs-cnn-comparison.txt
requirements/: cpu.txt  cu126.txt
scripts/: augment_positive_samples.py  bootstrap_env.sh  build_combined_train_test.py  generate_and_train_mixed.sh  generate_detection_set.sh  generate_detection_set_v2.sh  generate_testing_sets.sh  generate_testing_sets_basic.sh  generate_testing_suites.sh  generate_training_sets.sh  generate_training_sets_1024.sh  merge_and_restride.py  merge_datasets.py  restride_dataset.py  run_fable_occ_1024_offset.sh  run_v2_pipeline.sh  split_train_test.py  visualize_fp.py
src/: acquire_and_localize.py  acquire_yolo.py  augment_roi_occlusion.py  bench_deploy_strategies.py  benchmark.py  calibrate_decode.py  check_clip_bias.py  compare_fullframe_vs_roi.py  convert_heatmaps_to_npz.py  eval_4to10m.py  eval_l2_distribution.py  eval_negative_peaks.py  generate_cctag_dataset.py  infer_cctag_heatmap.py  infer_timing.py  make_boundary_figure.py  make_boundary_overlays.py  make_dataset_samples_grid.py  make_heatmap_triptych.py  make_slide.py  overlay_center_bias.py  prepare_yolo_dataset.py  resize_heatmap_dataset.py  restride_heatmap_dataset.py  roi_from_detection.py  sample_roi_dataset.py  test_input_resolutions.py  tile_detect.py  tile_heatmap.py  tiling_boundary_test.py  tiling_full_sweep.py  tiling_min_tiles.py  train_cctag_heatmap.py  train_cctag_heatmap_copy.py  train_cctag_heatmap_ddp.py  train_yolo_detection.py  visualize_inference_samples.py  visualize_random_labels.py
