[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cctag-heatmap-regression"
version = "0.1.0"
description = "Synthetic CCTag dataset generation, training, and inference workspace."
readme = "README.md"
# Loosened from ==3.12.11 so this can be a uv workspace member of `fso`
# (requires-python ==3.10.*). The intersection inside that workspace is 3.10.*;
# standalone it still resolves on newer 3.x. No 3.11/3.12-only syntax is used.
requires-python = ">=3.10"
dependencies = [
    # Kept within fso's `>=2.0,<2.4` window so the shared workspace lockfile
    # resolves (was pinned ==2.4.3, which fso excludes).
    "numpy>=2.0,<2.4",
    "opencv-python==4.13.0.92",
]

[project.optional-dependencies]
cpu = [
    "torch==2.11.0",
    "torchvision==0.26.0",
]
cu126 = [
    "torch==2.11.0+cu126",
    "torchvision==0.26.0+cu126",
]
# Detection (acquisition) stage: YOLO-nano via ultralytics. Isolated extra so it
# coexists with either the cpu or cu126 torch extra. Install alongside one of them:
#   uv sync --extra cu126 --extra detect
detect = [
    "ultralytics>=8.3.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu126" },
    ],
]

# Index/source config mirrors fso's so the two pyprojects agree inside one
# workspace (same index names must point at the same URLs). Standalone, this
# repo resolves through the same mirrors.
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]
